fixed issues with wrapper where padding -x was not showing

--- a/sass/components/_dropdown.sass
+++ b/sass/components/_dropdown.sass
@@ -10,8 +10,8 @@
     @if $enable-padding == true
       padding: 0.8rem .8rem
 
-    &.#{$class-prefix}dropdown#{$separator}menu#{$separator}aligned#{$separator}left
+    &.#{$class-prefix}dropdown#{$separator}menu#{$separator}align#{$separator}left
       left: 0
 
-    &.#{$class-prefix}dropdown#{$separator}menu#{$separator}aligned#{$separator}right
+    &.#{$class-prefix}dropdown#{$separator}menu#{$separator}align#{$separator}right
       right: 0
