--- a/sass/layouts/_wrapper.sass
+++ b/sass/layouts/_wrapper.sass
@@ -21,8 +21,8 @@
 .#{$class-prefix}wrapper#{$separator}7xl
   margin: 0 auto
   @if $enable-padding == true
-    padding-left: 0.8375rem
-    padding-right: 0.8375rem
+    padding-left: 0.8375rem !important
+    padding-right: 0.8375rem !important
 
 @media (min-width: 36rem)
   .#{$class-prefix}wrapper
